# rpmfusion-packager

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  rpmfusion-packager.spec.in  runme
configs/: koji-rpmfusion  rpmfusion.conf
src/: koji-rpmfusion-config  plague-client-rf.sh  rpmfusion-cert.py  rpmfusion-cert.py.in  rpmfusion-free-cvs.py  rpmfusion-nonfree-cvs.py  rpmfusion-packager-setup.py  rpmfusion-packager-setup.py.in  secondary-koji
src/rpmfusion_cert/: __init__.py
